--- a/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
+++ b/geonode/maptiles/templates/maptiles/maptiles_geoext_map.html
@@ -87,7 +87,6 @@ $(document).ready(function(){
        
 });
 
-
 function floor_tile_size(x){
     return  (Math.floor(x/_TILE_SIZE) * _TILE_SIZE);
 }
@@ -166,6 +165,18 @@ function find_georef(tile_list, georef){
      return index;
 }
 
+function wfs_proto_creator(layer_request){
+    return new OpenLayers.Protocol.WFS({
+        version: "1.0.0",
+        url: geoserver+"geonode/wfs",
+        featurePrefix: "geonode",
+        featureType: layer_request,
+        featureNS: "http://www.geonode.org/",
+        srsName: "EPSG:32651",
+        outputFormat: "json"
+    });
+}
+
 function selection_bounds(map_bounds, highlight_layer) {
     
     var transformed_bounds = map_bounds.clone().transform(new OpenLayers.Projection("EPSG:900913"), new OpenLayers.Projection("EPSG:32651"));
@@ -176,7 +187,8 @@ function selection_bounds(map_bounds, highlight_layer) {
         value: transformed_bounds.toGeometry()
     });
     
-    var wfs_proto = new OpenLayers.Protocol.WFS({
+    var wfs_proto = wfs_proto_creator("{{feature_tiled}}");
+    /*var wfs_proto = new OpenLayers.Protocol.WFS({
         version: "1.0.0",
         //url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
         url: geoserver+"geonode/wfs",
@@ -185,7 +197,7 @@ function selection_bounds(map_bounds, highlight_layer) {
         featureNS: "http://www.geonode.org/",
         srsName: "EPSG:32651",
         outputFormat: "json"
-    });              
+    });*/              
 
     var wfs_resp = wfs_proto.read({
         filter: filter,
@@ -219,8 +231,12 @@ function selection_bounds(map_bounds, highlight_layer) {
     });
 }
 
-function areaInterestZoom(province, municipality){
-    var wfs_proto = new OpenLayers.Protocol.WFS({
+function checkJurisdicton(){
+}
+
+function jurisdictionZoom(province, municipality){
+    var wfs_proto = wfs_proto_creator( "{{ feature_municipality }}");
+    /*var wfs_proto = new OpenLayers.Protocol.WFS({
             version: "1.0.0",
             //url: "http://192.168.56.100:8080/geoserver/geonode/wfs",
             url: geoserver+"geonode/wfs",
@@ -229,36 +245,36 @@ function areaInterestZoom(province, municipality){
             featureNS: "http://www.geonode.org/",
             srsName: "EPSG:32651",
             outputFormat: "application/json"
-        });              
+        });*/              
         
-        var filter = new OpenLayers.Filter.Logical({
-            type: "&&",
-            filters:[
-                new OpenLayers.Filter.Comparison({
-                    type: "==",
-                    property: "NAME_2",
-                    value: municipality
-                }),
-                new OpenLayers.Filter.Comparison({
-                    type: "==",
-                    property:"NAME_1",
-                    value: province
-                })
-            ]
-        });
+    var filter = new OpenLayers.Filter.Logical({
+        type: "&&",
+        filters:[
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property: "NAME_2",
+                value: municipality
+            }),
+            new OpenLayers.Filter.Comparison({
+                type: "==",
+                property:"NAME_1",
+                value: province
+            })
+        ]
+    });
         
-        var wfs_resp  = wfs_proto.read({
-            filter: filter,
-            callback: function(response){
-                if(response.priv.responseText){
-                    var json_parser = new OpenLayers.Format.GeoJSON();
-                    var feature_out = json_parser.read(response.priv.responseText);
-                    feature_out[0].geometry.calculateBounds();
-                    interest_bounds = feature_out[0].geometry.getBounds();
-                    map.zoomToExtent(interest_bounds.transform(new OpenLayers.Projection("EPSG:32651"), new OpenLayers.Projection("EPSG:900913")), false);
-                }
+    var wfs_resp  = wfs_proto.read({
+        filter: filter,
+        callback: function(response){
+            if(response.priv.responseText){
+                var json_parser = new OpenLayers.Format.GeoJSON();
+                var feature_out = json_parser.read(response.priv.responseText);
+                feature_out[0].geometry.calculateBounds();
+                interest_bounds = feature_out[0].geometry.getBounds();
+                map.zoomToExtent(interest_bounds.transform(new OpenLayers.Projection("EPSG:32651"), new OpenLayers.Projection("EPSG:900913")), false);
             }
-        });
+        }
+    });
 }
 
 function removeHighlight(georef, vec_layer){
